Update password hashing id type converted from string to int
