# src/TripBundle/Controller/AccountsController.php
@@ -16,7 +16,7 @@
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: 1.0.0
- *
+ * 
  * Generated by: https://github.com/openapitools/openapi-generator.git
  *
  */
@@ -36,9 +36,10 @@ use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\HttpKernel\Exception\HttpException;
 use Symfony\Component\Validator\Constraints as Assert;
 use TripBundle\Api\AccountsApiInterface;
+use TripBundle\Model\Account;
+use TripBundle\Model\AccountCreate;
 use TripBundle\Model\AccountUpdate;
-use OpenApi\Annotations as OA;
-use Nelmio\ApiDocBundle\Annotation\Model;
+use TripBundle\Model\DefaultResponse;
 
 /**
  * AccountsController Class Doc Comment
@@ -56,11 +57,6 @@ class AccountsController extends Controller
      *
      * Create account
      *
-     * @OA\RequestBody(
-     *     required=true,
-     *     @Model(type=AccountUpdate::class),
-     * )
-     *
      * @param Request $request The Symfony request to handle.
      * @return Response The Symfony response.
      */
@@ -76,7 +72,7 @@ class AccountsController extends Controller
         // Figure out what data format to return to the client
         $produces = ['application/json'];
         // Figure out what the client accepts
-        $clientAccepts = $request->headers->has('Accept') ? $request->headers->get('Accept') : '*/*';
+        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
         $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
         if ($responseFormat === null) {
             return new Response('', 406);
@@ -88,14 +84,14 @@ class AccountsController extends Controller
         $securityBearerAuth = $request->headers->get('authorization');
 
         // Read out all input parameter values into variables
-        $accountUpdate = $request->getContent();
+        $accountCreate = $request->getContent();
 
         // Use the default value if no value was provided
 
         // Deserialize the input values that needs it
         try {
             $inputFormat = $request->getMimeType($request->getContentType());
-            $accountUpdate = $this->deserialize($accountUpdate, 'TripBundle\Model\AccountUpdate', $inputFormat);
+            $accountCreate = $this->deserialize($accountCreate, 'TripBundle\Model\AccountCreate', $inputFormat);
         } catch (SerializerRuntimeException $exception) {
             return $this->createBadRequestResponse($exception->getMessage());
         }
@@ -103,9 +99,9 @@ class AccountsController extends Controller
         // Validate the input values
         $asserts = [];
         $asserts[] = new Assert\NotNull();
-        $asserts[] = new Assert\Type("TripBundle\Model\AccountUpdate");
+        $asserts[] = new Assert\Type("TripBundle\Model\AccountCreate");
         $asserts[] = new Assert\Valid();
-        $response = $this->validate($accountUpdate, $asserts);
+        $response = $this->validate($accountCreate, $asserts);
         if ($response instanceof Response) {
             return $response;
         }
@@ -116,11 +112,11 @@ class AccountsController extends Controller
 
             // Set authentication method 'BearerAuth'
             $handler->setBearerAuth($securityBearerAuth);
-
+            
             // Make the call to the business logic
             $responseCode = 200;
             $responseHeaders = [];
-            $result = $handler->createAccount($accountUpdate, $responseCode, $responseHeaders);
+            $result = $handler->createAccount($accountCreate, $responseCode, $responseHeaders);
 
             // Find default response message
             $message = 'unexpected error';
@@ -136,7 +132,7 @@ class AccountsController extends Controller
             }
 
             return new Response(
-                $result !== null ? $this->serialize($result, $responseFormat) : '',
+                $result !== null ?$this->serialize($result, $responseFormat):'',
                 $responseCode,
                 array_merge(
                     $responseHeaders,
@@ -164,7 +160,7 @@ class AccountsController extends Controller
         // Figure out what data format to return to the client
         $produces = ['application/json'];
         // Figure out what the client accepts
-        $clientAccepts = $request->headers->has('Accept') ? $request->headers->get('Accept') : '*/*';
+        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
         $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
         if ($responseFormat === null) {
             return new Response('', 406);
@@ -181,7 +177,7 @@ class AccountsController extends Controller
 
         // Deserialize the input values that needs it
         try {
-            $accountId = $this->deserialize($accountId, 'string', 'string');
+            $accountId = $this->deserialize($accountId, 'int', 'string');
         } catch (SerializerRuntimeException $exception) {
             return $this->createBadRequestResponse($exception->getMessage());
         }
@@ -189,7 +185,7 @@ class AccountsController extends Controller
         // Validate the input values
         $asserts = [];
         $asserts[] = new Assert\NotNull();
-        $asserts[] = new Assert\Type("string");
+        $asserts[] = new Assert\Type("int");
         $response = $this->validate($accountId, $asserts);
         if ($response instanceof Response) {
             return $response;
@@ -201,7 +197,7 @@ class AccountsController extends Controller
 
             // Set authentication method 'BearerAuth'
             $handler->setBearerAuth($securityBearerAuth);
-
+            
             // Make the call to the business logic
             $responseCode = 200;
             $responseHeaders = [];
@@ -221,7 +217,7 @@ class AccountsController extends Controller
             }
 
             return new Response(
-                $result !== null ? $this->serialize($result, $responseFormat) : '',
+                $result !== null ?$this->serialize($result, $responseFormat):'',
                 $responseCode,
                 array_merge(
                     $responseHeaders,
@@ -249,7 +245,7 @@ class AccountsController extends Controller
         // Figure out what data format to return to the client
         $produces = ['application/json'];
         // Figure out what the client accepts
-        $clientAccepts = $request->headers->has('Accept') ? $request->headers->get('Accept') : '*/*';
+        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
         $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
         if ($responseFormat === null) {
             return new Response('', 406);
@@ -266,7 +262,7 @@ class AccountsController extends Controller
 
         // Deserialize the input values that needs it
         try {
-            $accountId = $this->deserialize($accountId, 'string', 'string');
+            $accountId = $this->deserialize($accountId, 'int', 'string');
         } catch (SerializerRuntimeException $exception) {
             return $this->createBadRequestResponse($exception->getMessage());
         }
@@ -274,7 +270,7 @@ class AccountsController extends Controller
         // Validate the input values
         $asserts = [];
         $asserts[] = new Assert\NotNull();
-        $asserts[] = new Assert\Type("string");
+        $asserts[] = new Assert\Type("int");
         $response = $this->validate($accountId, $asserts);
         if ($response instanceof Response) {
             return $response;
@@ -286,7 +282,7 @@ class AccountsController extends Controller
 
             // Set authentication method 'BearerAuth'
             $handler->setBearerAuth($securityBearerAuth);
-
+            
             // Make the call to the business logic
             $responseCode = 200;
             $responseHeaders = [];
@@ -306,7 +302,7 @@ class AccountsController extends Controller
             }
 
             return new Response(
-                $result !== null ? $this->serialize($result, $responseFormat) : '',
+                $result !== null ?$this->serialize($result, $responseFormat):'',
                 $responseCode,
                 array_merge(
                     $responseHeaders,
@@ -341,7 +337,7 @@ class AccountsController extends Controller
         // Figure out what data format to return to the client
         $produces = ['application/json'];
         // Figure out what the client accepts
-        $clientAccepts = $request->headers->has('Accept') ? $request->headers->get('Accept') : '*/*';
+        $clientAccepts = $request->headers->has('Accept')?$request->headers->get('Accept'):'*/*';
         $responseFormat = $this->getOutputFormat($clientAccepts, $produces);
         if ($responseFormat === null) {
             return new Response('', 406);
@@ -359,9 +355,10 @@ class AccountsController extends Controller
 
         // Deserialize the input values that needs it
         try {
-            $accountId = $this->deserialize($accountId, 'string', 'string');
+            $accountId = $this->deserialize($accountId, 'int', 'string');
             $inputFormat = $request->getMimeType($request->getContentType());
             $accountUpdate = $this->deserialize($accountUpdate, 'TripBundle\Model\AccountUpdate', $inputFormat);
+            $accountUpdate->setId($accountId);
         } catch (SerializerRuntimeException $exception) {
             return $this->createBadRequestResponse($exception->getMessage());
         }
@@ -369,7 +366,7 @@ class AccountsController extends Controller
         // Validate the input values
         $asserts = [];
         $asserts[] = new Assert\NotNull();
-        $asserts[] = new Assert\Type("string");
+        $asserts[] = new Assert\Type("int");
         $response = $this->validate($accountId, $asserts);
         if ($response instanceof Response) {
             return $response;
@@ -389,7 +386,7 @@ class AccountsController extends Controller
 
             // Set authentication method 'BearerAuth'
             $handler->setBearerAuth($securityBearerAuth);
-
+            
             // Make the call to the business logic
             $responseCode = 200;
             $responseHeaders = [];
@@ -409,7 +406,7 @@ class AccountsController extends Controller
             }
 
             return new Response(
-                $result !== null ? $this->serialize($result, $responseFormat) : '',
+                $result !== null ?$this->serialize($result, $responseFormat):'',
                 $responseCode,
                 array_merge(
                     $responseHeaders,
